Bug 441638 - Task Sets Docker:Alpha into mask causes crash
Summary: Task Sets Docker:Alpha into mask causes crash
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-08-28 02:54 UTC by thetwo
Modified: 2021-09-08 07:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kritacrash (938.10 KB, text/plain)
2021-08-28 02:54 UTC, thetwo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thetwo 2021-08-28 02:54:59 UTC
Created attachment 141098 [details]
kritacrash

STEPS TO REPRODUCE
1. Create a new mask that cannot use "Alpha into mask" (such as a transparency mask)
2. Click "Alpha into mask" in Task Sets Docker
Comment 1 Ahab Greybeard 2021-08-30 08:33:45 UTC
I can conform this crash condition for the 5.0.0-beta1 and Aug 29 5.1.0-prealpha (git 542dcd3) appimages on Debian 10.

This does not happen with the 4.4.8 appimage, hence regression.
Comment 2 Halla Rempt 2021-09-07 11:37:40 UTC
Thread 169 "Thread (pooled)" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fff4cff9700 (LWP 373480)]
0x00007ffff73245b6 in KisMask::Private::initSelectionImpl(KisSharedPtr<KisSelection>, KisSharedPtr<KisLayer>, KisSharedPtr<KisPaintDevice>) () from /home/halla/dev/i-krita/lib/x86_64-linux-gnu/libkritaimage.so.18
(gdb) bt
#0  0x00007ffff73245b6 in KisMask::Private::initSelectionImpl(KisSharedPtr<KisSelection>, KisSharedPtr<KisLayer>, KisSharedPtr<KisPaintDevice>) () from /home/halla/dev/i-krita/lib/x86_64-linux-gnu/libkritaimage.so.18
#1  0x00007ffff7324e52 in KisMask::initSelection(KisSharedPtr<KisLayer>) ()
   from /home/halla/dev/i-krita/lib/x86_64-linux-gnu/libkritaimage.so.18
#2  0x00007ffff730e58a in KisLayerUtils::InitSplitAlphaSelectionMask::populateChildCommands() ()
   from /home/halla/dev/i-krita/lib/x86_64-linux-gnu/libkritaimage.so.18
#3  0x00007ffff4afea42 in KisCommandUtils::AggregateCommand::redo() ()
   from /home/halla/dev/i-krita/lib/x86_64-linux-gnu/libkritacommand.so.18
#4  0x00007ffff72aed93 in KisStrokeStrategyUndoCommandBased::doStrokeCallback(KisStrokeJobData*) ()
   from /home/halla/dev/i-krita/lib/x86_64-linux-gnu/libkritaimage.so.18
#5  0x00007ffff7157e33 in non-virtual thunk to KisUpdateJobItem::run() ()
   from /home/halla/dev/i-krita/lib/x86_64-linux-gnu/libkritaimage.so.18
#6  0x00007ffff5c5eb72 in ?? () from /home/halla/dev/deps/lib/libQt5Core.so.5
#7  0x00007ffff5c5b592 in ?? () from /home/halla/dev/deps/lib/libQt5Core.so.5
#8  0x00007ffff3c72609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#9  0x00007ffff58ad293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
Comment 3 Halla Rempt 2021-09-07 11:50:51 UTC
Backtrace with line numbers: 
[Switching to Thread 0x7fff34ff9700 (LWP 397967)]
__GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
50      ../sysdeps/unix/sysv/linux/raise.c: No such file or directory.
(gdb) bt
#0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
#1  0x00007ffff547b859 in __GI_abort () at abort.c:79
#2  0x00007ffff58ed455 in QMessageLogger::fatal(char const*, ...) const ()
   from /home/halla/dev/deps/lib/libQt5Core.so.5
#3  0x00007ffff58ec827 in qt_assert(char const*, char const*, int) ()
   from /home/halla/dev/deps/lib/libQt5Core.so.5
#4  0x00007ffff6dbfd09 in KisMask::Private::initSelectionImpl (this=<optimized out>, copyFrom=..., 
    parentLayer=..., copyFromDevice=...) at /home/halla/dev/krita/libs/image/kis_mask.cc:162
#5  0x00007ffff70f28d7 in KisMask::initSelection (this=this@entry=0x555564340f10, parentLayer=...)
    at /home/halla/dev/krita/libs/global/kis_shared_ptr.h:206
#6  0x00007ffff70d435a in KisLayerUtils::InitSplitAlphaSelectionMask::populateChildCommands (
    this=<optimized out>) at /usr/include/c++/9/bits/atomic_base.h:318
#7  0x00007ffff4742252 in KisCommandUtils::AggregateCommand::redo (this=0x7fffdc006c20)
    at /home/halla/dev/krita/libs/command/kis_command_utils.cpp:27
#8  0x00007ffff705c4ce in KisStrokeStrategyUndoCommandBased::doStrokeCallback (this=0x5555642c54d0, 
    data=0x555563ef0870) at /usr/include/c++/9/bits/atomic_base.h:318
#9  0x00007ffff6e7f0eb in KisStrokeJob::run (this=<optimized out>)
    at /home/halla/dev/krita/libs/image/kis_stroke_job.h:32
#10 KisUpdateJobItem::run (this=0x55555b017b40) at /home/halla/dev/krita/libs/image/kis_update_job_item.h:90
#11 0x00007ffff5929b72 in ?? () from /home/halla/dev/deps/lib/libQt5Core.so.5
#12 0x00007ffff5926592 in ?? () from /home/halla/dev/deps/lib/libQt5Core.so.5
#13 0x00007ffff3898609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#14 0x00007ffff5578293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
Comment 4 Halla Rempt 2021-09-07 11:54:47 UTC
Git commit 504cb84ef82b0c355ed57215d24539549417bf75 by Halla Rempt.
Committed on 07/09/2021 at 11:54.
Pushed by rempt into branch 'master'.

Do not execute disabled actions in the task set docker

M  +3    -1    plugins/dockers/tasksetdocker/tasksetdocker_dock.cpp

https://invent.kde.org/graphics/krita/commit/504cb84ef82b0c355ed57215d24539549417bf75
Comment 5 Halla Rempt 2021-09-08 07:53:42 UTC
Git commit 5aef6b854a144e2aa8f40b811898ded0be4f17db by Halla Rempt.
Committed on 08/09/2021 at 07:29.
Pushed by rempt into branch 'krita/5.0'.

Do not execute disabled actions in the task set docker
(cherry picked from commit 504cb84ef82b0c355ed57215d24539549417bf75)

M  +3    -1    plugins/dockers/tasksetdocker/tasksetdocker_dock.cpp

https://invent.kde.org/graphics/krita/commit/5aef6b854a144e2aa8f40b811898ded0be4f17db