Do not execute disabled actions in the task set docker

BUG:441638
(cherry picked from commit 504cb84ef82b0c355ed57215d24539549417bf75)